@@ -1,3 +1,10 @@
+2011-02-25  Teodor Zlatanov  <tzz@lifelogs.com>
+
+	* auth-source.el (auth-source-save-behavior): New variable to replace
+	`auth-source-never-create'.
+	(auth-source-netrc-create): Use it.
+	(auth-source-never-save): Remove.
+
 2011-02-25  Lars Ingebrigtsen  <larsi@gnus.org>
 
 	* nnimap.el (nnimap-stream): Doc fix.
